--- a/Study/English/1. Special structure.md
+++ b/Study/English/1. Special structure.md
@@ -16,7 +16,7 @@ tags:
 **Use**: Nói một lời khuyên, răn đe (tốt nhất là).
 **Had better** ≈ **Should** ≈ **Ought to**
 
-> [!NOTE] Had better
+> [!info] Had better
 > **S + had better + V<sub>inf</sub>**
 
 **Example**:
@@ -36,6 +36,32 @@ tags:
 **Use**: Diễn tả mong muốn, sở thích
 
 > [!info] Would rather
-> S + would rather + V<sub>inf</sub>
+> **S + would rather + V<sub>inf</sub>**
+
+**Use**: So sánh, thích sự việc này hơn sự việc kia
+
+> [!info] Would rather so sánh
+> **S + would rather + V<sub>inf</sub> + than + V<sub>inf</sub>**
+
+**Use**: Muốn ai đó làm việc gì đó
+
+> [!info] Would rather 2 chủ ngữ
+> **S + would rather + S<sub>2</sub> + V<sub>ed/C2</sub>**
+
+**Example**:
+- I would rather drink a cup of coffee, I don't like sweet food.
+- I would rather play table tennis than play basketball.
+- I would rather you took me the hat over there.
+# Would you mind
+**Use**: Nhờ giúp đỡ trong tiếng anh (Bạn có phiền).
+
+> [!info] Would/Do you mind
+> **Would/Do you mind + V_ing**
+
+👉 **Dùng với if**:
+
+> [!info] Would you mind
+> **Do you mind + If + S + V<sub>(s/es)</sub>** (điều kiện loại 1)
+> **Would you mind + if + S + V<sub>ed/C2</sub>** (điều kiện loại 2)
 
 
