--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -64,4 +64,18 @@ tags:
 > **Do you mind + If + S + V<sub>(s/es)</sub>** (điều kiện loại 1)
 > **Would you mind + if + S + V<sub>ed/C2</sub>** (điều kiện loại 2)
 
+**Example**:
+- Would you mind taking me the remote control over there?
+- Do you mind fixing the TV for me?
+- Would you mind if I took your coat, I'm so cold!
+- Do you mind if I own 5 cents after cleaning your garden?
+# Have something done
+**Use**: Have someone to do something (dạng bị động).
 
+> [!info] Have something done
+> **S + have/get + something + PP**
+
+**Example**:
+- I have my bike fixed.
+- I have my son cleaned the car for me.
+# But for
