--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -10,7 +10,7 @@ tags:
 > **S + used to + V<sub>inf</sub>**
 
 **Example**:
-- I used to go to school by bye, but now I use an electrical scooter.
+- I used to go to school by bike, but now I use an electrical scooter.
 - I used to have a dream to become an investor, but now I would like to become a developer.
 # Had better
 **Use**: Nói một lời khuyên, răn đe (tốt nhất là).
@@ -58,7 +58,7 @@ tags:
 > [!info] Would/Do you mind
 > **Would/Do you mind + V_ing**
 
-👉 **Dùng với if**:
+👉 *Dùng với if*:
 
 > [!info] Would you mind
 > **Do you mind + If + S + V<sub>(s/es)</sub>** (điều kiện loại 1)
@@ -79,3 +79,80 @@ tags:
 - I have my bike fixed.
 - I have my son cleaned the car for me.
 # But for
+Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết quả khác sẽ xảy ra (thay vì kết quả này).
+👉 **But for** = **Unless**
+
+> [!info] But for
+> **But for + Noun phrase/V_ing, S + V**
+> **But for + the fact that + S + V, S + V**
+
+**Example**:
+- But for his advanced assignments, I won't have the gold medal.
+- But for the fact that he is stupid, he wouldn't believe what I said and wouldn't become so success like today.
+# Mood
+**Use**: Đang có tâm trạng để làm gì
+
+> [!info] In the mood
+> **S + be + in the mood + to_V/for V_ing**
+
+**Example**:
+- I'm in the mood for learning English, but I'm not sure if this feeling doesn't last too long.
+# Phân từ hoàn thành
+**Use**: Miêu tả 1 hành động xảy ra trước khi 1 hành động khác bắt đầu
+
+> [!info] Phân từ hoàn thành
+> **Having + PP** (Active)
+> **Having + been + PP** (Passive)
+
+**Example**:
+- Having finished housework, I immediately open the computer and check for the result.
+- Having been bitten by the dog, he quickly go to the hospital.
+# Ceremony
+**Use**: Đừng khách sáo
+
+> [!info] Ceremony
+> **Make yourself at home**
+> **Don't stand on ceremony**
+
+**Example**:
+- Oh man, don't stand on ceremony, eat these fruits.
+- Linda tried to make herself at home when she went to her friend's house because she wanted to be cool.
+# Give detailed description
+**Use**: Hãy kể lại chi tiết cho tôi
+
+> [!info] Give detailed description
+> **Give a detailed description of sth**
+> **Describe sth in detail**
+
+**Example**:
+- Mr Adam required his wife to give him a detailed description of the accident.
+- J.K Rowling describe the school of Hogwart in detail
+# Accuse
+**Use**: Đổ lỗi cho ai đó
+
+> [!info] Accuse
+> S + accuse + sbd + of + V_ing/N
+
+**Example**:
+- He accuse his wife of lying him behind closed doors.
+- Miss Pan accuse the children of damaging her windows while playing football.
+
+# Much as
+**Use**: Có nghĩa là mặc dù (although)
+
+> [!info] Much as
+> **Much as + S + V, S + V**
+
+**Example**:
+- Much as you buy me amazing gifts and expensive phones, I will never put you into my heart.
+- Much as you hate me, I won't care because I have a lot more people who enjoy playing with me.
+# Object to
+**Use**: Phản đối 1 việc gì đó
+
+> [!info] Object to
+> S + object to + V_ing/N
+
+**Example**:
+- Her parents object to her smoking activies.
+- Mr Tom objects to making himself at home.
+
