--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -156,3 +156,13 @@ Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết q
 - Her parents object to her smoking activies.
 - Mr Tom objects to making himself at home.
 
+# Suggest
+**Use**: Đưa ra lời khuyên, lời đề nghị, gợi ý.
+
+> [!info] Suggest
+> **S + suggest + V_ing**
+> **S + suggest (that) + S + (should) + V<sub>inf</sub>**
+
+**Example**:
+- The doctor suggest training both physical and mental health.
+- Her teacher suggest she make a breathtaking profile.
