--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -131,7 +131,7 @@ Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết q
 **Use**: Đổ lỗi cho ai đó
 
 > [!info] Accuse
-> S + accuse + sbd + of + V_ing/N
+> **S + accuse + sbd + of + V_ing/N**
 
 **Example**:
 - He accuse his wife of lying him behind closed doors.
@@ -150,11 +150,11 @@ Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết q
 **Use**: Phản đối 1 việc gì đó
 
 > [!info] Object to
-> S + object to + V_ing/N
+> **S + object to + V_ing/N**
 
 **Example**:
-- Her parents object to her smoking activies.
-- Mr Tom objects to making himself at home.
+- Her parents object to her bad activities.
+- Mr Tom objects to making himself at home when he come to his friend's house.
 
 # Suggest
 **Use**: Đưa ra lời khuyên, lời đề nghị, gợi ý.
