--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -166,3 +166,21 @@ Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết q
 **Example**:
 - The doctor suggest training both physical and mental health.
 - Her teacher suggest she make a breathtaking profile.
+# While
+**Use**: Giết thời gian bằng cách làm việc gì đó
+
+> [!info] While
+> **While sth away**
+> **Why away sth**
+
+**Example**:
+- I while away the time by looking through some magazines.
+# Feel like
+**Use**: Cảm thấy muốn làm gì
+
+> [!NOTE] Feel like
+> S + feel like + V_ing
+
+**Example**:
+- She feel like going to the beach.
+- Mr John feel like drinking a cup of coffee, he hates sweet food.
