--- a/English/2. Special phrases.md
+++ b/English/2. Special phrases.md
@@ -3,7 +3,6 @@ tags:
   - English
   - Vocab
 ---
-
 # Pull one's weight
 **Meaning**: Chịu trách nhiệm phần của mình, làm xong phần của mình
 **Example**:
@@ -107,3 +106,21 @@ tags:
 **Meaning**: Tìm đường về đâu đó
 **Example**:
 - She find the way home after losing in the forest for 2 hours.
+# Let one's hair down
+**Meaning**: xoã ra, thư giãn, vui vẻ
+**Example**:
+- Heidi said she was going to let her hair down because the exams were over.
+- Trang let her hair down after about 3 hours of studying.
+# Run a/the risk
+
+> [!info] Run a/the risk
+> Run a/the risk + of V_ing
+
+**Meaning**: Có nguy cơ, ở trong tình huống nguy hiểm
+**Example**:
+- He's running the risk of being chosen to the military.
+- The lion is running a risk of being killed by the big tiger.
+# Through thick and thin
+**Meaning**: Trải qua những thăng trầm sóng gió
+**Example**:
+- We was together through thick and thin, now I can't object to helping him.
