--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -79,7 +79,7 @@ tags:
 - I have my bike fixed.
 - I have my son cleaned the car for me.
 # But for
-Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết quả khác sẽ xảy ra (thay vì kết quả này).
+**Use**: Diễn tả rằng nếu không có một sự việc gì đó thì kết quả khác sẽ xảy ra (thay vì kết quả này).
 👉 **But for** = **Unless**
 
 > [!info] But for
@@ -161,7 +161,7 @@ Use: Diễn tả rằng nếu không có một sự việc gì đó thì kết q
 
 > [!info] Suggest
 > **S + suggest + V_ing**
-> **S + suggest (that) + S + (should) + V<sub>inf</sub>**
+> **S + suggest (that) + Somebody + (should) + V<sub>inf</sub>**
 
 **Example**:
 - The doctor suggest training both physical and mental health.
