--- a/English/2. Special phrases.md
+++ b/English/2. Special phrases.md
@@ -124,3 +124,21 @@ tags:
 **Meaning**: Trải qua những thăng trầm sóng gió
 **Example**:
 - We was together through thick and thin, now I can't object to helping him.
+# Have butterflies (in one's stomach)
+**Meaning**: Cảm thấy lo lắng, bồn chồn
+**Example**:
+- He had butterflies in his stomach when the MC told him to go.
+- Mr Thoa had butterflies in the plane because she thought that the plane could be damaged by the birds.
+# Have a big mouth
+**Meaning**: Khoác loác, mồm to (*boast*)
+**Example**:
+- I hate him because he boast too much -> I hate him because he has a big mouth.
+# Bear no resemblance to sbd/sth
+
+> [!info] Bear no resemblance to sbd/sth
+> Bear no/little/hardly resemblance + to + sbd/sth
+
+**Meaning**: Khác biệt, không giống với ai, cái gì đó
+**Example**:
+- John bears no resemblance to his dad.
+
