--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -7,7 +7,7 @@ tags:
 **Use**: nói về **1 thói quen, trạng thái, sự kiện** đã từng xảy ra trong quá khứ nhưng đã chấm dứt và không còn đúng ở hiện tại.
 
 > [!info] Used to
-> **S + used to + V<sub>inf</sub>**
+> S + used to + V<sub>inf</sub>
 
 **Example**:
 - I used to go to school by bike, but now I use an electrical scooter.
@@ -17,7 +17,7 @@ tags:
 **Had better** ≈ **Should** ≈ **Ought to**
 
 > [!info] Had better
-> **S + had better + V<sub>inf</sub>**
+> S + had better + V<sub>inf</sub>
 
 **Example**:
 - You had better go to the doctor, you look very sick now.
@@ -26,8 +26,8 @@ tags:
 **Use**: Diễn tả một điều ưa thích hoặc mong muốn.
 
 > [!info] Would like
-> **S + would like + to V**
-> **S + would like + N**
+> S + would like + to V
+> S + would like + N
 
 **Example**:
 - I would like to eat something now, I'm hungry.
@@ -36,17 +36,17 @@ tags:
 **Use**: Diễn tả mong muốn, sở thích
 
 > [!info] Would rather
-> **S + would rather + V<sub>inf</sub>**
+> S + would rather + V<sub>inf</sub>
 
 **Use**: So sánh, thích sự việc này hơn sự việc kia
 
 > [!info] Would rather so sánh
-> **S + would rather + V<sub>inf</sub> + than + V<sub>inf</sub>**
+> S + would rather + V<sub>inf</sub> + than + V<sub>inf</sub>
 
 **Use**: Muốn ai đó làm việc gì đó
 
 > [!info] Would rather 2 chủ ngữ
-> **S + would rather + S<sub>2</sub> + V<sub>ed/C2</sub>**
+> S + would rather + S<sub>2</sub> + V<sub>ed/C2</sub>
 
 **Example**:
 - I would rather drink a cup of coffee, I don't like sweet food.
@@ -56,13 +56,13 @@ tags:
 **Use**: Nhờ giúp đỡ trong tiếng anh (Bạn có phiền).
 
 > [!info] Would/Do you mind
-> **Would/Do you mind + V_ing**
+> Would/Do you mind + V_ing
 
 👉 *Dùng với if*:
 
 > [!info] Would you mind
-> **Do you mind + If + S + V<sub>(s/es)</sub>** (điều kiện loại 1)
-> **Would you mind + if + S + V<sub>ed/C2</sub>** (điều kiện loại 2)
+> Do you mind + If + S + V<sub>(s/es)</sub> (điều kiện loại 1)
+> Would you mind + if + S + V<sub>ed/C2</sub> (điều kiện loại 2)
 
 **Example**:
 - Would you mind taking me the remote control over there?
@@ -73,7 +73,7 @@ tags:
 **Use**: Have someone to do something (dạng bị động).
 
 > [!info] Have something done
-> **S + have/get + something + PP**
+> S + have/get + something + PP
 
 **Example**:
 - I have my bike fixed.
@@ -83,8 +83,8 @@ tags:
 👉 **But for** = **Unless**
 
 > [!info] But for
-> **But for + Noun phrase/V_ing, S + V**
-> **But for + the fact that + S + V, S + V**
+> But for + Noun phrase/V_ing, S + V
+> But for + the fact that + S + V, S + V
 
 **Example**:
 - But for his advanced assignments, I won't have the gold medal.
@@ -93,7 +93,7 @@ tags:
 **Use**: Đang có tâm trạng để làm gì
 
 > [!info] In the mood
-> **S + be + in the mood + to_V/for V_ing**
+> S + be + in the mood + to_V/for V_ing
 
 **Example**:
 - I'm in the mood for learning English, but I'm not sure if this feeling doesn't last too long.
@@ -101,8 +101,8 @@ tags:
 **Use**: Miêu tả 1 hành động xảy ra trước khi 1 hành động khác bắt đầu
 
 > [!info] Phân từ hoàn thành
-> **Having + PP** (Active)
-> **Having + been + PP** (Passive)
+> Having + PP (Active)
+> Having + been + PP (Passive)
 
 **Example**:
 - Having finished housework, I immediately open the computer and check for the result.
@@ -111,8 +111,8 @@ tags:
 **Use**: Đừng khách sáo
 
 > [!info] Ceremony
-> **Make yourself at home**
-> **Don't stand on ceremony**
+> Make yourself at home
+> Don't stand on ceremony
 
 **Example**:
 - Oh man, don't stand on ceremony, eat these fruits.
@@ -121,8 +121,8 @@ tags:
 **Use**: Hãy kể lại chi tiết cho tôi
 
 > [!info] Give detailed description
-> **Give a detailed description of sth**
-> **Describe sth in detail**
+> Give a detailed description of sth
+> Describe sth in detail
 
 **Example**:
 - Mr Adam required his wife to give him a detailed description of the accident.
@@ -131,7 +131,7 @@ tags:
 **Use**: Đổ lỗi cho ai đó
 
 > [!info] Accuse
-> **S + accuse + sbd + of + V_ing/N**
+> S + accuse + sbd + of + V_ing/N
 
 **Example**:
 - He accuse his wife of lying him behind closed doors.
@@ -141,7 +141,7 @@ tags:
 **Use**: Có nghĩa là mặc dù (although)
 
 > [!info] Much as
-> **Much as + S + V, S + V**
+> Much as + S + V, S + V
 
 **Example**:
 - Much as you buy me amazing gifts and expensive phones, I will never put you into my heart.
@@ -150,7 +150,7 @@ tags:
 **Use**: Phản đối 1 việc gì đó
 
 > [!info] Object to
-> **S + object to + V_ing/N**
+> S + object to + V_ing/N
 
 **Example**:
 - Her parents object to her bad activities.
@@ -160,8 +160,8 @@ tags:
 **Use**: Đưa ra lời khuyên, lời đề nghị, gợi ý.
 
 > [!info] Suggest
-> **S + suggest + V_ing**
-> **S + suggest (that) + Somebody + (should) + V<sub>inf</sub>**
+> S + suggest + V_ing
+> S + suggest (that) + Somebody + (should) + V<sub>inf</sub>
 
 **Example**:
 - The doctor suggest training both physical and mental health.
@@ -170,8 +170,8 @@ tags:
 **Use**: Giết thời gian bằng cách làm việc gì đó
 
 > [!info] While
-> **While sth away**
-> **Why away sth**
+> While sth away
+> Why away sth
 
 **Example**:
 - I while away the time by looking through some magazines.
