--- a/English/2. Special phrases.md
+++ b/English/2. Special phrases.md
@@ -141,4 +141,18 @@ tags:
 **Meaning**: Khác biệt, không giống với ai, cái gì đó
 **Example**:
 - John bears no resemblance to his dad.
+# Be out of the question
 
+> [!info] Be out of the question
+> S + be + out of the question
+
+👉 *Remember*: Nếu cấu trúc là ***it + be + out of the question + that + clause*** thì mệnh đề(clause) phải ở dạng ngược lại của ý nghĩa.
+**Meaning**: Miêu tả 1 điều gì đó không thể hoàn thành (can't be possibly)
+**Example**:
+- It's out of the question that Mr John can sell this picture.
+- Finishing this project in one week is out of the question.
+# None of one's business
+👉 **None of one's business** = **Doesn't concern someone**
+**Meaning**: Không phải việc của tôi, không liên quan đến tôi
+**Example**:
+- What Mr John does doesn't concern me - What Mr John does is none of my business.
