--- a/English/2. Special phrases.md
+++ b/English/2. Special phrases.md
@@ -42,6 +42,54 @@ tags:
 - Trở thành
 **Example**:
 - She turn out a professional table tennis player.
+# Come
+## Come over
+Meaning: đi đến nơi nào đó
+Example:
+- His brother invited me to come over the park.
+## Come round
+Meaning: tỉnh lại (sau cơn hôn mê)
+Example:
+- Our hero, the Flash, come round after nearly 2 months lying on the bed in the local hospital.
+## Come down
+Meaning: Rơi xuống, giảm xuống
+Example:
+- The heavy rain is coming down the street
+- The price of this coat is day by day come down.
+## Come down to
+Meaning: Chung quy lại, là do, rốt cuộc vấn đề là (to depend on a single important point)
+Example:
+- All the problems here come down to her mistake.
+- Being owning this house comes down to her great effort.
+## Come down on somebody
+Meaning: Chỉ trích, phạt nặng ai đó
+Example:
+- The boss shouldn't come down on his staffs.
+## Come down with
+Meaning: Mắc bệnh nhưng ở mức độ nhẹ
+Example:
+- I came down with a flu last night.
+## Come up
+Meaning: nổi lên, xuất hiện
+Example:
+- The sun is coming up above the surface of water.
+- I'll let you know if anything comes up
+## Come up with
+Meaning: Đã nghĩ ra câu trả lời, phương án giải quyết, nảy ra 1 ý tưởng
+Example:
+- The Prime Minister came up with a way to escape the "B paradise" after a whole night of thinking.
+## Come up against
+Meaning: Phải đối mặt hoặc bị phản đối bởi ai/cái gì.
+Example:
+- Apple company's new design of the Iphone 16 comes up against most people's idea.
+## Come out
+Meaning: Xuất hiện, được xuất bản, ra mắt
+Example:
+- The version 0.9.9 of Opencore is going to be come out.
+## Come out with
+Meaning: nói điều gì đó (không ngờ tới)
+Example:
+- He always come out with his stupid idea.
 # With a view to
 
 > [!info] With a view to
@@ -156,3 +204,8 @@ tags:
 **Meaning**: Không phải việc của tôi, không liên quan đến tôi
 **Example**:
 - What Mr John does doesn't concern me - What Mr John does is none of my business.
+# Set foot in somewhere
+**Meaning**: Đi đến nơi nào đó, đặt chân đến nơi nào đó
+**Example**:
+- I would like to set foot in the USA.
+- He object to setting foot in the library
