--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -184,3 +184,12 @@ tags:
 **Example**:
 - She feel like going to the beach.
 - Mr John feel like drinking a cup of coffee, he hates sweet food.
+# Likelihood
+**Use**: Có khả năng làm gì
+
+> [!info] Likelihood
+> there is + (no/little) + likelihood + that + clause
+
+**Example**:
+- There's little likelihood that Mr John will come and join the party.
+- There's likelihood that Phong will catch more than 2 fishes today.
