--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -68,7 +68,7 @@ tags:
 - Would you mind taking me the remote control over there?
 - Do you mind fixing the TV for me?
 - Would you mind if I took your coat, I'm so cold!
-- Do you mind if I own 5 cents after cleaning your garden?
+- Do you mind if I earn 5 cents after cleaning your garden?
 # Have something done
 **Use**: Have someone to do something (dạng bị động).
 
@@ -88,7 +88,7 @@ tags:
 
 **Example**:
 - But for his advanced assignments, I won't have the gold medal.
-- But for the fact that he is stupid, he wouldn't believe what I said and wouldn't become so success like today.
+- But for the fact that he is stupid, he wouldn't believe what I said and wouldn't become as successful as he is today.
 # Mood
 **Use**: Đang có tâm trạng để làm gì
 
@@ -96,7 +96,7 @@ tags:
 > S + be + in the mood + to_V/for V_ing
 
 **Example**:
-- I'm in the mood for learning English, but I'm not sure if this feeling doesn't last too long.
+- I'm in the mood to learn English, but I'm not sure if this feeling doesn't last too long.
 # Phân từ hoàn thành
 **Use**: Miêu tả 1 hành động xảy ra trước khi 1 hành động khác bắt đầu
 
@@ -106,7 +106,7 @@ tags:
 
 **Example**:
 - Having finished housework, I immediately open the computer and check for the result.
-- Having been bitten by the dog, he quickly go to the hospital.
+- Having been bitten by the dog, he quickly goes to the hospital.
 # Ceremony
 **Use**: Đừng khách sáo
 
@@ -126,7 +126,7 @@ tags:
 
 **Example**:
 - Mr Adam required his wife to give him a detailed description of the accident.
-- J.K Rowling describe the school of Hogwart in detail
+- J.K Rowling describes the school of Hogwarts in detail
 # Accuse
 **Use**: Đổ lỗi cho ai đó
 
@@ -134,8 +134,8 @@ tags:
 > S + accuse + sbd + of + V_ing/N
 
 **Example**:
-- He accuse his wife of lying him behind closed doors.
-- Miss Pan accuse the children of damaging her windows while playing football.
+- He accuses his wife of lying to him behind closed doors.
+- Miss Pan accuses the children of damaging her windows while playing football.
 
 # Much as
 **Use**: Có nghĩa là mặc dù (although)
@@ -154,7 +154,7 @@ tags:
 
 **Example**:
 - Her parents object to her bad activities.
-- Mr Tom objects to making himself at home when he come to his friend's house.
+- Mr Tom objects to making himself at home when he comes to his friend's house.
 
 # Suggest
 **Use**: Đưa ra lời khuyên, lời đề nghị, gợi ý.
@@ -164,8 +164,8 @@ tags:
 > S + suggest (that) + Somebody + (should) + V<sub>inf</sub>
 
 **Example**:
-- The doctor suggest training both physical and mental health.
-- Her teacher suggest she make a breathtaking profile.
+- The doctor suggests training in both physical and mental health.
+- Her teacher suggests she make a breathtaking profile.
 # While
 **Use**: Giết thời gian bằng cách làm việc gì đó
 
@@ -182,8 +182,8 @@ tags:
 > S + feel like + V_ing
 
 **Example**:
-- She feel like going to the beach.
-- Mr John feel like drinking a cup of coffee, he hates sweet food.
+- She feels like going to the beach.
+- Mr John feels like drinking a cup of coffee, he hates sweet food.
 # Likelihood
 **Use**: Có khả năng làm gì
 
@@ -192,4 +192,12 @@ tags:
 
 **Example**:
 - There's little likelihood that Mr John will come and join the party.
-- There's likelihood that Phong will catch more than 2 fishes today.
+- There's the likelihood that Phong will catch more than 2 fishes today.
+# On the point of
+Use: Sắp, chuẩn bị làm một điều gì đó (to be going to do something very soon)
+
+> [!info] On the point of
+> S + be + on the point of + V_ing
+
+Example:
+- The boy was on the point of crying after getting punished by his mom.
