--- a/English/2. Special phrases.md
+++ b/English/2. Special phrases.md
@@ -125,11 +125,11 @@ tags:
 # Behind closed doors
 **Meaning**: Không công khai, bí mật
 **Example**:
-- Apple company have a meeting behind closed doors to change the structure of their phones.
+- Apple has a meeting behind closed doors to change the structure of their phones.
 # Take my hat off
 **Meaning**: Ngưỡng mộ (ngả mũ thán phục)
 **Example**:
-- I take my hat of to you for your improvement
+- I take my hat off to you for your improvement
 # Take it easy
 **Meaning**: Nghỉ ngơi, thư giãn
 **Example**:
@@ -153,7 +153,7 @@ tags:
 # Find the way (somewhere)
 **Meaning**: Tìm đường về đâu đó
 **Example**:
-- She find the way home after losing in the forest for 2 hours.
+- She finds the way home after losing in the forest for 2 hours.
 # Let one's hair down
 **Meaning**: xoã ra, thư giãn, vui vẻ
 **Example**:
@@ -166,12 +166,12 @@ tags:
 
 **Meaning**: Có nguy cơ, ở trong tình huống nguy hiểm
 **Example**:
-- He's running the risk of being chosen to the military.
+- He's running the risk of being chosen for the military.
 - The lion is running a risk of being killed by the big tiger.
 # Through thick and thin
 **Meaning**: Trải qua những thăng trầm sóng gió
 **Example**:
-- We was together through thick and thin, now I can't object to helping him.
+- We were together through thick and thin, now I can't object to helping him.
 # Have butterflies (in one's stomach)
 **Meaning**: Cảm thấy lo lắng, bồn chồn
 **Example**:
@@ -180,7 +180,7 @@ tags:
 # Have a big mouth
 **Meaning**: Khoác loác, mồm to (*boast*)
 **Example**:
-- I hate him because he boast too much -> I hate him because he has a big mouth.
+- I hate him because he boasts too much -> I hate him because he has a big mouth.
 # Bear no resemblance to sbd/sth
 
 > [!info] Bear no resemblance to sbd/sth
@@ -203,9 +203,31 @@ tags:
 👉 **None of one's business** = **Doesn't concern someone**
 **Meaning**: Không phải việc của tôi, không liên quan đến tôi
 **Example**:
-- What Mr John does doesn't concern me - What Mr John does is none of my business.
+- What Mr John does doesn't concern me - What Mr. John does is none of my business.
 # Set foot in somewhere
 **Meaning**: Đi đến nơi nào đó, đặt chân đến nơi nào đó
 **Example**:
 - I would like to set foot in the USA.
-- He object to setting foot in the library
+- He objects to setting foot in the library
+# Book in advance
+**Meaning**: Đăt trước (đặt phòng trước/đặt chỗ trước)
+**Example**:
+- The ticket should be booked in advance if you want a good seat at the cinema.
+- John, please book a hotel room in advance as the hotel can run out of rooms anytime.
+# Make up one's mind
+**Meaning**: Quyết định (decide)
+**Example**:
+- I haven't made up my mind yet, please wait for 2 days.
+# Live up to something
+**Meaning**: Tốt như cái gì, đáp ứng (to be as good as something)
+
+> [!info] Live up to
+> Live up to + V_ing/N
+
+**Example**:
+- The concert lived up to her expectations, it was brilliant.
+- The new employee lives up to his boss' requirements.
+# Do me a favor/favour
+**Meaning**: Giúp tôi 1 việc
+**Example**:
+- Excuse me sir, can you do me a favor?
