--- a/English/3. Special prepositions.md
+++ b/English/3. Special prepositions.md
@@ -6,7 +6,7 @@ tags:
 # Or so
 **Meaning**: Khoảng (about)
 **Example**:
-- I think there was 20 people or so
+- I think there were 20 people or so
 # By profession
 **Meaning**: Làm 1 việc gì đó chuyên nghiệp
 **Example**:
