--- a/English/1. Special structure.md
+++ b/English/1. Special structure.md
@@ -194,10 +194,10 @@ tags:
 - There's little likelihood that Mr John will come and join the party.
 - There's the likelihood that Phong will catch more than 2 fishes today.
 # On the point of
-Use: Sắp, chuẩn bị làm một điều gì đó (to be going to do something very soon)
+**Use**: Sắp, chuẩn bị làm một điều gì đó (to be going to do something very soon)
 
 > [!info] On the point of
 > S + be + on the point of + V_ing
 
-Example:
+**Example**:
 - The boy was on the point of crying after getting punished by his mom.
